<resources>
    <string name="app_name">FoodVibe</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

    <string name="sign_up">SIGN UP</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">confirm_password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_phone_auth">PhoneAuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_email_password">Activity_Email_Password</string>
    <string name="registration">registration</string>
    <string name="Register">Register</string>
    <string name="Clear">Clear</string>
    <string name="Back">Back</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">221623114699507</string>

    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="launch_title">launch_title</string>
    <string name="sign_in_start">sign_in_start</string>
    <string name="ui_sign_in_with_email_facebook">sign in with facebook</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_firebase_ui">Activity_FirebaseUI</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_here">Login here</string>
    <string name="register_here">Register here</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="i_want_to_do_delivery">I want to do delivery</string>
    <string name="i_want_food">I want food</string>
    <string name="whats_your_vibe">whats your vibe?</string>
    <string name="dish_name">dish name</string>
    <string name="estimated_shipping_time">Estimated shipping time:</string>
    <string name="price" />
    <string name="ingredients">ingredients</string>
    <string name="title_activity_splash">Activity_Splash</string>
</resources>